--- a/src/public/dashboard.html
+++ b/src/public/dashboard.html
@@ -62,7 +62,7 @@
                                     <th scope="col">#</th>
                                     <th scope="col">Assunto</th>
                                     <th scope="col">Status</th>
-                                    <th scope="col"></th>
+                                    <th scope="col">Abrir</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -70,7 +70,11 @@
                                     <th scope="row">{{service_order.id}}</th>
                                     <td>{{service_order.subject}}</td>
                                     <td>{{service_order.status}}</td>
-                                    <td><a :href="'/service_orders/i?id='+service_order.id">Acessar</a></td>
+                                    <td>
+                                        <a :href="'/service_orders/i?id='+service_order.id"
+                                            ><i class="fa-solid fa-arrow-right"></i
+                                        ></a>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -85,7 +89,7 @@
                                     <th scope="col">#</th>
                                     <th scope="col">Nome</th>
                                     <th scope="col">Tipo</th>
-                                    <th scope="col"></th>
+                                    <th scope="col">Abrir</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -93,7 +97,11 @@
                                     <th scope="row">{{project.id}}</th>
                                     <td>{{project.name}}</td>
                                     <td>{{project.type}}</td>
-                                    <td><a :href="'/projects/i?id='+project.id">Acessar</a></td>
+                                    <td>
+                                        <a :href="'/projects/i?id='+project.id"
+                                            ><i class="fa-solid fa-arrow-right"></i
+                                        ></a>
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
