--- a/src/public/service_orders/i.html
+++ b/src/public/service_orders/i.html
@@ -27,6 +27,8 @@
             referrerpolicy="no-referrer"
         />
 
+        <script src="../assets/js/jquery-3.6.1.min.js"></script>
+
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
@@ -162,7 +164,12 @@
 
                 <div class="row" style="gap: 10px">
                     <div class="col border rounded p-2">
-                        <h5>Registros</h5>
+                        <div class="d-flex justify-content-between mb-2">
+                            <h5>Registros</h5>
+                            <button class="btn" v-on:click="handlerNewProtocolRegister">
+                                <i class="fa-solid fa-plus"></i> Adicionar registro
+                            </button>
+                        </div>
                         <div class="table-responsive">
                             <table class="table table-striped border">
                                 <thead>
@@ -188,7 +195,12 @@
                         </div>
                     </div>
                     <div class="col border rounded p-2">
-                        <h5>Recibos</h5>
+                        <div class="d-flex justify-content-between mb-2">
+                            <h5>Recibos</h5>
+                            <button class="btn" v-on:click="() => {}">
+                                <i class="fa-solid fa-plus"></i> Adicionar recibo
+                            </button>
+                        </div>
                         <div class="table-responsive">
                             <table class="table table-striped border">
                                 <thead>
@@ -219,6 +231,72 @@
             </section>
 
             <br />
+
+            <!-- Modal Protocol Register -->
+            <div
+                class="modal fade"
+                id="protocolRegisterModal"
+                tabindex="-1"
+                aria-labelledby="protocolRegisterModalLabel"
+                aria-hidden="true"
+            >
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="protocolRegisterModalLabel">Subprojeto</h1>
+                            <button
+                                type="button"
+                                class="btn-close"
+                                data-bs-dismiss="modal"
+                                aria-label="Fechar"
+                            ></button>
+                        </div>
+                        <div class="modal-body">
+                            <form @submit="handlerProtocolRegistertSubmit">
+                                <div class="row mb-3">
+                                    <label class="form-label" for="name">Descrição</label>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="name"
+                                        v-model="payloads.protocolRegister.description"
+                                        required
+                                    />
+                                </div>
+
+                                <div class="row mb-3">
+                                    <label class="form-label" for="url">Valor</label>
+                                    <input
+                                        type="number"
+                                        class="form-control"
+                                        id="url"
+                                        v-model="payloads.protocolRegister.value"
+                                        required
+                                    />
+                                </div>
+
+                                <div class="row mb-3">
+                                    <label class="form-label" for="type">Tipo:</label>
+                                    <select
+                                        class="form-control"
+                                        id="type"
+                                        v-model="payloads.protocolRegister.type"
+                                        required
+                                    >
+                                        <option disabled value="">Selecione uma opção</option>
+                                        <option value="Serviço">Serviço</option>
+                                        <option value="Despesa">Despesa</option>
+                                    </select>
+                                </div>
+
+                                <div class="row mb-3">
+                                    <input type="submit" class="form-control btn btn-dark btn-block" value="Enviar" />
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <script src="../assets/js/axios.min.js"></script>
