--- a/src/public/projects/i.html
+++ b/src/public/projects/i.html
@@ -388,10 +388,30 @@
                                         class="form-control"
                                         id="condition"
                                         v-model="payloads.check.condition"
-                                        required
                                     />
 
                                     <small>&bull; $ = Response (json/text)</small>
+                                </div>
+
+                                <div class="row mb-3">
+                                    <label class="form-label" for="message">Mensagem</label>
+                                    <textarea
+                                        class="form-control"
+                                        id="message"
+                                        v-model="payloads.check.message"
+                                        rows="5"
+                                        required
+                                    ></textarea>
+                                </div>
+
+                                <div class="d-flex flex-row m-0 mb-3" style="gap: 10px">
+                                    <input
+                                        class="form-check-input"
+                                        type="checkbox"
+                                        v-model="payloads.check.verify_status"
+                                        checked
+                                    />
+                                    <span>Verificar Status Code</span>
                                 </div>
 
                                 <div class="d-flex flex-row m-0 mb-3" style="gap: 10px">
