--- a/src/public/service_orders/index.html
+++ b/src/public/service_orders/index.html
@@ -70,12 +70,16 @@
             </div>
 
             <div class="table-responsive m-2">
-                <table class="table table-striped border">
+                <table class="table table-striped border" data-toggle="table">
                     <thead>
                         <tr>
-                            <th scope="col">#</th>
+                            <th scope="col" style="cursor: pointer" v-on:click="sort('id')">
+                                # <i class="fa-solid fa-sort"></i>
+                            </th>
                             <th scope="col">Assunto</th>
-                            <th scope="col">Status</th>
+                            <th scope="col" style="cursor: pointer" v-on:click="sort('status')">
+                                Status <i class="fa-solid fa-sort"></i>
+                            </th>
                             <th scope="col">Projeto</th>
                             <th scope="col">Cliente</th>
                             <th scope="col">Abrir</th>
